actualizando skills y formación

--- a/index.html
+++ b/index.html
@@ -231,6 +231,18 @@
                         <p class="nombreIcono lead">Python</p>
                     </div>        
                     <div class="m-2">
+                        <img src="img/skills/technical-skills/numpy-original.svg" class="iconoSkill" alt="logo de Numpy">
+                        <p class="nombreIcono lead">Numpy</p>
+                    </div>        
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/pandas-original.svg" class="iconoSkill" alt="logo de Pandas">
+                        <p class="nombreIcono lead">Pandas</p>
+                    </div>        
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/power-bi.svg" class="iconoSkill" alt="logo de Power BI">
+                        <p class="nombreIcono lead">Power BI</p>
+                    </div>        
+                    <div class="m-2">
                         <img src="img/skills/technical-skills/mongodb.png" class="iconoSkill" alt="logo de MongoDB">
                         <p class="nombreIcono lead">MongoDB</p>
                     </div>    
@@ -318,39 +330,39 @@
         <section>
             <h2 id="formacion" class="titulo fs-1">Formación</h2>
             <div class="container">
-                <p class="resumen mt-4 mb-4">Esta es mi formación profesional principal. Sin embargo, cuento con otras certificaciones y estudios que acompañan mis conocimientos en tecnología, como cursos en udemy, entre otros, que siempre me sirven para profundizar en tecnología y complementar las formaciones.</p>
+                <p class="resumen mt-4 mb-4">Esta es mi formación profesional principal. Sin embargo, cuento con otras certificaciones y estudios que acompañan mis conocimientos en tecnología, como cursos en Udemy, Código Facilito, entre otros, que siempre me sirven para profundizar y complementar las formaciones.</p>
                 <div class="proyectos">
-                    <!-- Profesorado de matemática -->
+                    <!-- Ingeniería en sistemas UTEL -->
                     <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
-                        <a href="https://isfd45-bue.infd.edu.ar/sitio/" target="_blank">
-                            <img src="img/education/profesorado.png"
-                                alt="imagen de la portada de inicio del I.S.F.D. N° 45" class="img">
+                        <a href="https://utel.edu.mx/argentina" target="_blank">
+                            <img src="img/education/Utel_logo.png"
+                                alt="imagen del logo de la universidad UTEL" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4 m-0">Profesorado de matemática</p>
-                            <p class="fs-4 mt-3 lead">2010-2018 Terminado</p>
+                            <p class="fs-4 m-0">Ingeniería en sistemas</p>
+                            <p class="fs-4 mt-3 lead">En curso</p>
                         </div>
                     </article>
-                    <!-- Desarrollador Front-end React -->
+                    <!-- Python Data Analyst NTT Data Foundation -->
                     <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
-                        <a href="https://www.coderhouse.com/certificados/61c37d0347aaf1005d0eb0d9" target="_blank">
-                            <img src="img/education/certificado-front-end.png"
-                                alt="imagen del certificado de mi carrera de Desarrollador Front-end React" class="img">
+                        <a href="https://www.etdfundacionnttdata.com/" target="_blank">
+                            <img src="img/education/portada-ntt-data.jpg"
+                                alt="imagen del logo de la universidad UTEL" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4 m-0">Desarrollador Front-end React</p>
-                            <p class="fs-4 mt-3 lead">2021 mar-dic</p>
+                            <p class="fs-4 m-0">Python Data Analyst</p>
+                            <p class="fs-4 mt-3 lead">2023 Mar-Jul</p>
                         </div>
                     </article>
-                    <!-- Programa ONE -->
+                    <!-- Diplomatura en Ciencia de Datos e Inteligencia Artificial -->
                     <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
-                        <a href="https://app.aluracursos.com/user/nahuel-developer1/program/certificate" target="_blank">
-                            <img src="img/education/programa-ONE.png"
-                                alt="imagen del nombre del programa ONE con su slogan" class="img">
+                        <a href="https://argentinaprograma.unsam.edu.ar/paginas/plan.html" target="_blank">
+                            <img src="img/education/logo-unsam.jpg"
+                                alt="imagen del logo de la universidad UNSAM" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4 m-0">Programa ONE</p>
-                            <p class="fs-4 mt-3 lead">2021 Dic - 2022 Jun</p>
+                            <p class="fs-4 m-0">Ciencia de Datos e IA</p>
+                            <p class="fs-4 mt-3 lead">2023 Feb-Oct</p>
                         </div>
                     </article>
                     <!-- Programa Codo a Codo Full Stack Node.js -->
@@ -364,39 +376,39 @@
                             <p class="fs-4 mt-3 lead">2022 Ago-Dic</p>
                         </div>
                     </article>
-                    <!-- Diplomatura en Ciencia de Datos e Inteligencia Artificial -->
+                    <!-- Programa ONE -->
                     <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
-                        <a href="https://argentinaprograma.unsam.edu.ar/paginas/plan.html" target="_blank">
-                            <img src="img/education/logo-unsam.jpg"
-                                alt="imagen del logo de la universidad UNSAM" class="img">
+                        <a href="https://app.aluracursos.com/user/nahuel-developer1/program/certificate" target="_blank">
+                            <img src="img/education/programa-ONE.png"
+                                alt="imagen del nombre del programa ONE con su slogan" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4 m-0">Ciencia de Datos e IA</p>
-                            <p class="fs-4 mt-3 lead">En curso</p>
+                            <p class="fs-4 m-0">Programa ONE</p>
+                            <p class="fs-4 mt-3 lead">Dic 2021 - Jun 2022</p>
                         </div>
                     </article>
-                    <!-- Ingeniería en sistemas UTEL -->
+                    <!-- Desarrollador Front-end React -->
                     <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
-                        <a href="https://utel.edu.mx/argentina" target="_blank">
-                            <img src="img/education/Utel_logo.png"
-                                alt="imagen del logo de la universidad UTEL" class="img">
+                        <a href="https://www.coderhouse.com/certificados/61c37d0347aaf1005d0eb0d9" target="_blank">
+                            <img src="img/education/certificado-front-end.png"
+                                alt="imagen del certificado de mi carrera de Desarrollador Front-end React" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4 m-0">Ingeniería en sistemas</p>
-                            <p class="fs-4 mt-3 lead">En curso</p>
+                            <p class="fs-4 m-0">Desarrollador Front-end React</p>
+                            <p class="fs-4 mt-3 lead">2021 Mar-Dic</p>
                         </div>
                     </article>
-                    <!-- Bootcamp Python Data Analyst NNT Data -->
-                    <!-- <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
-                        <a href="https://www.etdfundacionnttdata.com/" target="_blank">
-                            <img src="img/education/Utel_logo.png"
-                                alt="imagen del logo de NTT Data" class="img">
+                    <!-- Profesorado de matemática -->
+                    <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
+                        <a href="https://isfd45-bue.infd.edu.ar/sitio/" target="_blank">
+                            <img src="img/education/profesorado.png"
+                                alt="imagen de la portada de inicio del I.S.F.D. N° 45" class="img">
                         </a>
                         <div class="info">
-                            <p class="fs-4 m-0">Python Data Analyst</p>
-                            <p class="fs-4 mt-3 lead">En curso</p>
+                            <p class="fs-4 m-0">Profesorado de matemática</p>
+                            <p class="fs-4 mt-3 lead">2010-2018</p>
                         </div>
-                    </article> -->
+                    </article>
                 </div>
             </div>
         </section>
