corrigiendo una descripción

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
                         <a href="https://www.etdfundacionnttdata.com/" target="_blank">
                             <img src="img/education/portada-ntt-data.jpg"
-                                alt="imagen del logo de la universidad UTEL" class="img">
+                                alt="imagen del logo de NTT Data Foundation" class="img">
                         </a>
                         <div class="info">
                             <p class="fs-4 m-0">Python Data Analyst</p>
