portfolio actualizado y estilo del README mejorado

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     </div>    
                     <div class="m-2">
                         <img src="img/skills/technical-skills/tailwindcss.svg" class="iconoSkill" alt="logo de Tailwindcss">
-                        <p class="nombreIcono lead">Tailwind</p>
+                        <p class="nombreIcono lead">Tailwindcss</p>
                     </div>    
                     <div class="m-2">
                         <img src="img/skills/technical-skills/sass.svg" class="iconoSkill" alt="logo de SASS">
@@ -230,6 +230,18 @@
                         <img src="img/skills/technical-skills/python.svg" class="iconoSkill" alt="logo de Python">
                         <p class="nombreIcono lead">Python</p>
                     </div>        
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/flask-original.svg" class="iconoSkill" alt="logo de Flask">
+                        <p class="nombreIcono lead">Flask</p>
+                    </div>        
+                    <!-- <div class="m-2">
+                        <img src="img/skills/technical-skills/django-plain.svg" class="iconoSkill" alt="logo de Django">
+                        <p class="nombreIcono lead">Django</p>
+                    </div>        
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/fastapi-original.svg" class="iconoSkill" alt="logo de FastAPI">
+                        <p class="nombreIcono lead">FastAPI</p>
+                    </div>         -->
                     <div class="m-2">
                         <img src="img/skills/technical-skills/numpy-original.svg" class="iconoSkill" alt="logo de Numpy">
                         <p class="nombreIcono lead">Numpy</p>
@@ -351,7 +363,7 @@
                         </a>
                         <div class="info">
                             <p class="fs-4 m-0">Python Data Analyst</p>
-                            <p class="fs-4 mt-3 lead">2023 Mar-Jul</p>
+                            <p class="fs-4 mt-3 lead">2023 Mar-Jun</p>
                         </div>
                     </article>
                     <!-- Diplomatura en Ciencia de Datos e Inteligencia Artificial -->
