enlace al certificado de Escuela de Talento Digital de NTT Data agregado

--- a/index.html
+++ b/index.html
@@ -357,13 +357,13 @@
                     </article>
                     <!-- Python Data Analyst NTT Data Foundation -->
                     <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
-                        <a href="https://www.etdfundacionnttdata.com/" target="_blank">
+                        <a href="https://drive.google.com/file/d/14ebWcHWfL2dkMIZMZUEKciYZzIBar360/view?usp=sharing" target="_blank">
                             <img src="img/education/portada-ntt-data.jpg"
                                 alt="imagen del logo de NTT Data Foundation" class="img">
                         </a>
                         <div class="info">
                             <p class="fs-4 m-0">Python Data Analyst</p>
-                            <p class="fs-4 mt-3 lead">2023 Mar-Jun</p>
+                            <p class="fs-4 mt-3 lead">2023 feb-Jul</p>
                         </div>
                     </article>
                     <!-- Diplomatura en Ciencia de Datos e Inteligencia Artificial -->
@@ -401,7 +401,7 @@
                     </article>
                     <!-- Desarrollador Front-end React -->
                     <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
-                        <a href="https://www.coderhouse.com/certificados/61c37d0347aaf1005d0eb0d9" target="_blank">
+                        <a href="https://drive.google.com/file/d/1x7zopVHRcM0GEzGzKQMlmMVU4DwHqhB7/view?usp=sharing" target="_blank">
                             <img src="img/education/certificado-front-end.png"
                                 alt="imagen del certificado de mi carrera de Desarrollador Front-end React" class="img">
                         </a>
