--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <!-- Texto de presentación e iconos de redes sociales-->
                     <div class="presentacionInfo stretchRight">
                         <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Analista de Datos & Desarrollador Full Stack</h1>
-                        <p class="presentacionInfoPrincipal lead">Full Stack JavaScript con stack MERN, Python Data Analyst, profesor de matemática y tutor de JavaScript.
+                        <p class="presentacionInfoPrincipal lead">Full Stack con JavaScript y Python, Analista de Datos, Tutor de JavaScript y Profesor de Matemática.
                         Me encuentro reforzando mi stack con proyectos, mientras aprendo otras tecnologías para el análisis de datos y el machine learning. 
                         Busco trabajar en equipos donde pueda aplicar mis conocimientos, hacer un plan de carrera y seguir creciendo a nivel profesional.</p>
                         <div class="cajaIconosPresentacion">
