agregando la card del reto final del bootcamp de Python Data Analyst

--- a/index.html
+++ b/index.html
@@ -594,6 +594,24 @@
                             </a>
                         </div>
                     </article>
+                    <!-- Retos del programa de Python Data Analyst de NTT Data Foundation -->
+                    <article class="proyecto proyecto-hover">
+                        <a href="https://github.com/Nahuel-DevOne/ntt-data-retos" target="_blank">
+                            <img src="./img/projects/banner-python-data-analyst.png" alt="imagen de la portada del PDF, del reto final del bootcamp de Python Data Analyst" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4 m-0">Python Data Analyst</p>
+                            <p class="fs-4 mt-3 lead">NTT Data Foundation</p>
+                        </div>
+                        <div class="d-flex">
+                            <a href="https://drive.google.com/file/d/17rDATZPem4_FNr8wxD7m1oSyf-5vVgFY/view?usp=sharing" target="_blank">
+                                <button class="btn btn-md btnColorUno bg-gradient">Ver Documentación</button>
+                            </a>
+                            <a href="https://github.com/Nahuel-DevOne/ntt-data-retos" target="_blank">
+                                <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
+                            </a>
+                        </div>
+                    </article>
                 </div>
             </div>
         </section>
