linktree agregado y mejorando los estilos de los iconos de networking

--- a/index.html
+++ b/index.html
@@ -697,12 +697,14 @@
                 </div>
                 <div class="footerContacto col-10 col-md-5 col-xl-4 col-xxl-3 mb-2">
                     <div class="d-flex flex-column justify-content-start align-items-start">
-                        <h4>Redes Sociales</h4>
+                        <h4 class="ms-3">Networking</h4>
                         <div>
                             <a href="https://github.com/Nahuel-DevOne/" target="_blank" class="m-2"><img src="img/social/github.svg"
                                 alt="Imagen del icono de GitHub" class="iconoPresentacion"></a>
                             <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2"><img
                                 src="img/social/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion"></a>
+                            <a href="https://linktr.ee/nahuel.lopez" target="_blank" class="m-2"><img
+                                src="img/social/linktree.svg" alt="Imagen del icono de linktree" class="iconoPresentacion"></a>
                         </div>
                     </div>
                 </div>
