modificando la portada, descripción cambiada

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="presentacion mb-4">
                     <!-- Texto de presentación e iconos de redes sociales-->
                     <div class="presentacionInfo stretchRight">
-                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Analista de Datos & Desarrollador Full Stack</h1>
+                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Desarrollador Full Stack & Analista de Datos</h1>
                         <p class="presentacionInfoPrincipal lead">Full Stack con JavaScript y Python, Analista de Datos, Tutor de JavaScript y Profesor de Matemática.
                         Me encuentro reforzando mi stack con proyectos, mientras aprendo otras tecnologías para el análisis de datos y el machine learning. 
                         Busco trabajar en equipos donde pueda aplicar mis conocimientos, hacer un plan de carrera y seguir creciendo a nivel profesional.</p>
@@ -104,7 +104,7 @@
                     <div class="foto text-center mb-2">
                         <img src="./img/FotoPerfil.png" class="rounded-circle mb-3 imgFotoPerfil" alt="imagen de mi foto de perfil">
                         <p class="nombre">Nahuel Lopez</p>
-                        <p class="nombre">Python Data Analyst & Full Stack Developer</p>
+                        <p class="nombre">Full Stack Developer & Data Analyst</p>
                     </div>
                 </div>
             </div>
