actualizando la información al cargo de Data Engineer en NTT Data

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTAFOLIO</title>
-    <meta name="keywords" content="Portfolio, páginas web, sitios web, programación, trabajo freelance, Desarrollo web, Desarrollo Front-end, Desarrollo backend, Bases de datos, HTML, HTML5, CSS, CSS3, Bootstrap, Tailwind, Sass, Git, GitHub, JavaScript, jQuery, TypeScript, React, redux, Node, npm, Express, Firebase, MongoDB, MySQL, PostgreSQL">
+    <meta name="keywords" content="Portfolio, páginas web, sitios web, programación, trabajo freelance, Desarrollo web, Desarrollo Front-end, Desarrollo backend, Bases de datos, HTML, HTML5, CSS, CSS3, Bootstrap, Tailwind, Sass, Git, GitHub, JavaScript, jQuery, TypeScript, React, redux, Node, npm, Express, Firebase, MongoDB, MySQL, PostgreSQL, Docker, Linux, Python, análisis de datos, Ingeniería de datos,">
     <meta name="description" content="Este es el sitio web de mi portafolio">
     <!-- Imagen para el título de la pestaña -->
     <link rel="icon" type="favicon/x-icon" href="./img/pi-mathematical-constant-symbol.svg">
@@ -63,7 +63,7 @@
                             <a id="menu" class="nav-link m-2" href="#trabajos">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a id="menu" class="nav-link m-2 border-start rounded-3 ps-1" href="#contact">Contratar</a>
+                            <a id="menu" class="nav-link m-2 border-start rounded-3 ps-1" href="#contact">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -81,10 +81,13 @@
                 <div class="presentacion mb-4">
                     <!-- Texto de presentación e iconos de redes sociales-->
                     <div class="presentacionInfo stretchRight">
-                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Desarrollador Full Stack & Analista de Datos</h1>
-                        <p class="presentacionInfoPrincipal lead">Full Stack con JavaScript y Python, Analista de Datos, Tutor de JavaScript y Profesor de Matemática.
-                        Me encuentro reforzando mi stack con proyectos, mientras aprendo otras tecnologías para el análisis de datos y el machine learning. 
-                        Busco trabajar en equipos donde pueda aplicar mis conocimientos, hacer un plan de carrera y seguir creciendo a nivel profesional.</p>
+                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Data Engineer & Full Stack Developer</h1>
+                        <p class="presentacionInfoPrincipal lead">
+                            Actualmente me desempeño y estoy haciendo mi plan de carrera como Data Engineer en la empresa multinacional NTT Data. 
+                            <br>
+                            Además, soy Tutor de JavaScript en Coderhouse y cuento con formación de Full Stack Developer con JavaScript y Python.
+                            Me encuentro reforzando mi stack con proyectos, mientras aprendo otras tecnologías para la ingeniería de datos y el machine learning porque busco seguir creciendo a nivel profesional constantemente.     
+                        </p>
                         <div class="cajaIconosPresentacion">
                             <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-3 text-decoration-none">
                                 <img src="./img/social/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion">
@@ -104,7 +107,7 @@
                     <div class="foto text-center mb-2">
                         <img src="./img/FotoPerfil.png" class="rounded-circle mb-3 imgFotoPerfil" alt="imagen de mi foto de perfil">
                         <p class="nombre">Nahuel Lopez</p>
-                        <p class="nombre">Full Stack Developer & Data Analyst</p>
+                        <p class="nombre">Data Engineer & Full Stack Dev</p>
                     </div>
                 </div>
             </div>
@@ -669,7 +672,7 @@
     <!-- Acá termina el contenido principal -->
 
     <!-- Acá empieza el pie de página -->
-    <h2 id="contact" class="titulo text-center fs-1 mt-5">Contratar</h2>
+    <h2 id="contact" class="titulo text-center fs-1 mt-5">Contacto</h2>
     <footer id="footer" class="border-top container-fluid">
         <div class="container">
             <div class="row justify-content-around mt-3 gap-2 p-2">
@@ -677,13 +680,13 @@
                     <div class="d-flex flex-column justify-content-start align-items-start">
                         <h4 class="mb-3">Servicios:</h4>
                         <p>Desarrollo web</p>
-                        <p>Análisis de Datos</p>
                         <p>Desarrollo Backend</p>
+                        <p>Ingeniería de Datos</p>
                     </div>
                 </div>
                 <div class="footerContacto col-10 col-md-5 col-xl-4 col-xxl-3 mb-2">
                     <div class="d-flex flex-column justify-content-start align-items-start">
-                        <h4 class="mb-3">Contacto:</h4>
+                        <h4 class="mb-3">Contactame:</h4>
                         <div class="mb-3">
                             <span><i class="fa-solid fa-phone me-1"></i></span>(+54)1168076800
                         </div>
