--- a/index.html
+++ b/index.html
@@ -269,6 +269,14 @@
                         <img src="img/skills/technical-skills/postgresql.svg" class="iconoSkill" alt="logo de PostgreSQL">
                         <p class="nombreIcono lead">PostgreSQL</p>
                     </div>    
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/docker-original.svg" class="iconoSkill" alt="logo de Docker">
+                        <p class="nombreIcono lead">Docker</p>
+                    </div>    
+                    <!-- <div class="m-2">
+                        <img src="img/skills/technical-skills/linux-original.svg" class="iconoSkill" alt="logo de Linux">
+                        <p class="nombreIcono lead">Linux</p>
+                    </div>     -->
                 </div>    
                 <h3 class="subtitulo">Soft skills:</h3>
                 <div class="cajaSkills mb-5">
