certificado de la diplomatura agregado

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="presentacionInfo stretchRight">
                         <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Data Engineer & Full Stack Developer</h1>
                         <p class="presentacionInfoPrincipal lead">
-                            Actualmente me desempeño y estoy haciendo mi plan de carrera como Data Engineer en la empresa multinacional NTT Data. 
+                            Actualmente me desempeño como Data Engineer en la empresa multinacional NTT Data. 
                             <br>
                             Además, soy Tutor de JavaScript en Coderhouse y cuento con formación de Full Stack Developer con JavaScript y Python.
                             Me encuentro reforzando mi stack con proyectos, mientras aprendo otras tecnologías para la ingeniería de datos y el machine learning porque busco seguir creciendo a nivel profesional constantemente.     
@@ -379,7 +379,7 @@
                     </article>
                     <!-- Diplomatura en Ciencia de Datos e Inteligencia Artificial -->
                     <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
-                        <a href="https://argentinaprograma.unsam.edu.ar/paginas/plan.html" target="_blank">
+                        <a href="https://drive.google.com/file/d/1QCDL7hn8J79Tb4xt3K5S9vxCz7QYiy2D/view?usp=sharing" target="_blank">
                             <img src="img/education/logo-unsam.jpg"
                                 alt="imagen del logo de la universidad UNSAM" class="img">
                         </a>
