cambiando el diseño de mi marca personal a dev1

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <img src="img/logo1.png" class="gear" alt="">
                         <a href="#" id="marcaPersonal">
                             <p class="m-0">Nahuel</p>
-                            <p class="m-0">DevOne</p>
+                            <p class="m-0">Dev1⚡</p>
                         </a>
                         <!-- <span class="justBeNice desplazamiento">#</span> -->
                     </div>
@@ -759,7 +759,7 @@
         </div>
         <div class="container-fluid m-0 pb-1 pt-2">
             <a href="#" class="logoFooter">Portafolio</a>
-            <p class="footerInfo pb-4 m-0">&copy;2023 Desarrollado con ❤️ por Nahuel-DevOne<p/>
+            <p class="footerInfo pb-4 m-0">&copy;2023 Desarrollado con ❤️ por Nahuel-Dev1⚡<p/>
         </div>
     </footer>
     <!-- Acá termina el pie de página -->
