Formación de data engineer de Código Facilito y Datapath agregados

--- a/index.html
+++ b/index.html
@@ -402,6 +402,26 @@
                             <p class="fs-4 mt-3 lead">En curso</p>
                         </div>
                     </article>
+                    <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
+                        <a href="https://drive.google.com/file/d/1IyRAmZvxtk2WeY41Ui3C4DaFu-d_do4S/view?usp=sharing" target="_blank">
+                            <img src="img/education/img-ingenieria-de-datos.png"
+                                alt="imagen del logo del bootcamp de Data Engineer de Código Facilito" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4 m-0">Bootcamp de Ingeniería de Datos</p>
+                            <p class="fs-4 mt-3 lead">2024 Ene-Abr</p>
+                        </div>
+                    </article>
+                    <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
+                        <a href="https://drive.google.com/file/d/1R3hyFYUTImk11AjBbamDoT0r4Iqtr09A/view?usp=sharing" target="_blank">
+                            <img src="img/education/img-data-engineer.png"
+                                alt="imagen del inicio de la plataforma de Datapath" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4 m-0">Bootcamp Data Engineer</p>
+                            <p class="fs-4 mt-3 lead">2024 Ene-Mar</p>
+                        </div>
+                    </article>
                     <!-- Python Data Analyst NTT Data Foundation -->
                     <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
                         <a href="https://drive.google.com/file/d/19xZTaTxYhzWOFLRQjLjv-h8M4coWP9A5/view?usp=sharing" target="_blank">
@@ -437,7 +457,7 @@
                     </article>
                     <!-- Programa ONE -->
                     <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
-                        <a href="https://app.aluracursos.com/user/nahuel-developer1/program/certificate" target="_blank">
+                        <a href="https://app.aluracursos.com/user/nahuel-developer1/program/1/certificate" target="_blank">
                             <img src="img/education/programa-ONE.png"
                                 alt="imagen del nombre del programa ONE con su slogan" class="img">
                         </a>
@@ -758,8 +778,8 @@
             </div>
         </div>
         <div class="container-fluid m-0 pb-1 pt-2">
-            <a href="#" class="logoFooter">Portafolio</a>
-            <p class="footerInfo pb-4 m-0">&copy;2023 Desarrollado con ❤️ por Nahuel-Dev1⚡<p/>
+            <a href="#" class="logoFooter">Portfolio</a>
+            <p class="footerInfo pb-4 m-0">&copy;2023 Desarrollado con 💙 por Nahuel-Dev1⚡<p/>
         </div>
     </footer>
     <!-- Acá termina el pie de página -->
