--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="foto text-center mb-2">
                         <img src="./img/FotoPerfil.png" class="rounded-circle mb-3 imgFotoPerfil" alt="imagen de mi foto de perfil">
                         <p class="nombre">Nahuel Lopez</p>
-                        <p class="nombre">Data Engineer & Full Stack Dev</p>
+                        <p class="nombre">Data Engineer & Python Dev</p>
                     </div>
                 </div>
             </div>
@@ -742,30 +742,30 @@
             <div class="row justify-content-around mt-3 gap-2 p-2">
                 <div class="footerContacto col-10 col-md-5 col-xl-4 col-xxl-3 mb-2">
                     <div class="d-flex flex-column justify-content-start align-items-start">
-                        <h4 class="mb-3">Servicios:</h4>
+                        <h4 class="mb-3">Skills profesionales:</h4>
                         <p>Desarrollo web</p>
-                        <p>Desarrollo Backend</p>
                         <p>Ingeniería de Datos</p>
+                        <p>Machine Learning</p>
                     </div>
                 </div>
                 <div class="footerContacto col-10 col-md-5 col-xl-4 col-xxl-3 mb-2">
                     <div class="d-flex flex-column justify-content-start align-items-start">
                         <h4 class="mb-3">Contactame:</h4>
-                        <div class="mb-3">
-                            <span><i class="fa-solid fa-phone me-1"></i></span>(+54)1168076800
-                        </div>
-                        <div class="mb-3">
+                        <div class="mb-2">
                             <span><i class="fa-solid fa-envelope me-1"></i></span>nahuel.developer1@gmail.com
                         </div>
-                        <div class="border border-secondary rounded p-2">
+                        <div class="border border-secondary rounded p-2 mb-2">
                             <a href="mailTo:nahuel.developer1@gmail.com" id="escribeme" class="text-decoration-none footerContacto"><span><i class="fa-solid fa-message me-2"></i></span>Escríbeme</a>
+                        </div>
+                        <div class="p">
+                            <p>No trabajo freelance ni contractor.</p>
                         </div>
                     </div>
                 </div>
                 <div class="footerContacto col-10 col-md-5 col-xl-4 col-xxl-3 mb-2">
                     <div class="d-flex flex-column justify-content-start align-items-start">
-                        <h4 class="ms-3">Networking</h4>
-                        <div>
+                        <h4 class="mb-3">Networking</h4>
+                        <div">
                             <a href="https://github.com/Nahuel-DevOne/" target="_blank" class="m-2"><img src="img/social/github.svg"
                                 alt="Imagen del icono de GitHub" class="iconoPresentacion"></a>
                             <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2"><img
@@ -779,7 +779,7 @@
         </div>
         <div class="container-fluid m-0 pb-1 pt-2">
             <a href="#" class="logoFooter">Portfolio</a>
-            <p class="footerInfo pb-4 m-0">&copy;2023 Desarrollado con 💙 por Nahuel-Dev1⚡<p/>
+            <p class="footerInfo pb-4 m-0">&copy;2023 Desarrollado con 💙 por <i><b>Nahuel Dev1⚡</b></i><p/>
         </div>
     </footer>
     <!-- Acá termina el pie de página -->
