--- a/index.html
+++ b/index.html
@@ -743,9 +743,9 @@
                 <div class="footerContacto col-10 col-md-5 col-xl-4 col-xxl-3 mb-2">
                     <div class="d-flex flex-column justify-content-start align-items-start">
                         <h4 class="mb-3">Skills profesionales:</h4>
-                        <p>Desarrollo web</p>
-                        <p>Ingeniería de Datos</p>
-                        <p>Machine Learning</p>
+                        <p>- Desarrollo web</p>
+                        <p>- Ingeniería de Datos</p>
+                        <p>- Machine Learning</p>
                     </div>
                 </div>
                 <div class="footerContacto col-10 col-md-5 col-xl-4 col-xxl-3 mb-2">
